fix(matrix):Button on iOS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,19 @@ body {
   }
 }
 
+@media (max-width: $small) {
+  body, input[type="text"], h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5, .btn {
+    font-size: 20px;
+  }
+  .btn {
+    padding: 11px 11px;
+    line-height: 0;
+  }
+  input[type="text"] {
+    height: 50px;
+  }
+}
+
 @mixin margin-left($value){ margin-left: $value }
 @mixin margin-right($value){ margin-right: $value }
 @mixin padding-left($value){ padding-left: $value }
